--- a/houding.html
+++ b/houding.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Houdingen</title>
+
     <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/interactie.css" />
+    <link rel="stylesheet" href="styles/opdracht_1/houding.css" />
 
     <script
       defer
-      src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"
-    ></script>
+      src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js">
+    </script>
     <script
       defer
-      src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"
-    ></script>
+      src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js">
+    </script>
 
-    <script type="module" src="/scripts/houding.js"></script>
+    <script type="module" src="/scripts/opdracht_1/houding.js"></script>
   </head>
   <body>
     <div class="container" data-status="loading">
