--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kies een oefening</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>Oefeningen</h1>
     <ul>
-        <li><a href="/houding.html">Opdracht 1 <span>Houdingen</span></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+      <li>
+        <a href="/interactie.html">Opdracht 1 <span>Interactie</span></a>
+      </li>
+      <li>
+        <a href="/houding.html">Opdracht 2 <span>Houdingen</span></a>
+      </li>
+      <li><a href=""></a></li>
     </ul>
-</body>
+  </body>
 </html>
