--- a/houding.html
+++ b/houding.html
@@ -7,7 +7,7 @@
     <title>Houdingen</title>
 
     <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/opdracht_1/houding.css" />
+    <link rel="stylesheet" href="/opdracht_1/houding.css" />
 
     <script
       defer
@@ -18,7 +18,7 @@
       src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js">
     </script>
 
-    <script type="module" src="/scripts/opdracht_1/houding.js"></script>
+    <script type="module" src="/opdracht_1/houding.js"></script>
   </head>
   <body>
     <div class="container" data-status="loading">
