--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kies een oefening</title>
+
+    <link rel="stylesheet" href="/styles/base.css">
   </head>
   <body>
     <h1>Oefeningen</h1>
