--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kies een oefening</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/styles/base.css">
+    <title>Semafoor</title>
+
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="/styles/semafoor.css" />
+
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js">
+    </script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js">
+    </script>
+
+    <script type="module" src="/opdracht_1/houding.js"></script>
   </head>
   <body>
-    <h1>Oefeningen</h1>
-    <ul>
-      <li>
-        <a href="/interactie.html">Opdracht 1 <span>Interactie</span></a>
-      </li>
-      <li>
-        <a href="/houding.html">Opdracht 2 <span>Houdingen</span></a>
-      </li>
-      <li><a href=""></a></li>
-    </ul>
+    <div class="container" data-status="loading">
+      <canvas></canvas>
+      <p id="letterbox"></p>
+      <p class="previous"></p>
+    </div>
+    <div class="display">
+      <h1>Hieronder hoort INTERACTIE te komen staan</h1>
+      <p class="interactie"></p>
+    </div>
   </body>
 </html>
